# brazil_electricity_generation

./: .gitignore  README.md  etl_pipeline.py  pyproject.toml
etl/: __init__.py  extract.py  load.py  transform.py
