[tool.poetry]
name = "brazil-electricity-generation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
jupyterlab = "^4.1.4"
aiohttp = "^3.9.3"
plotly = "^5.20.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
fastparquet = "^2024.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
